# router-extensibility-load-testing

./: .gitignore  .sample_env  ClientAwareness.yml  GUIDResponse.yml  LICENSE  README.md  Shared.yml  StaticSubgraph.yml  Taskfile.Shared.yml  Taskfile.Test.yml  Taskfile.yml  docs.yaml  router.config.json
.github/workflows/: benchmarks.yml
coprocessors/csharp/: .dockerignore  CsharpCoprocessor.csproj  Dockerfile  Program.cs
coprocessors/go/: Dockerfile  go.mod  go.sum  main.go
coprocessors/java/: Dockerfile  pom.xml
coprocessors/node/: Dockerfile  index.js  package-lock.json  package.json
coprocessors/python/: .dockerignore  Dockerfile  main.py  requirements.txt
coprocessors/rust/: Cargo.toml  Dockerfile
coprocessors/rust/src/: main.rs
loadtest/: headers.txt  targets.txt
loadtest/queries/: AllLocations.json  Location.json  Order.json  SearchProducts.json  SearchVariants.json  User.json
loadtester/: Dockerfile  go.mod  go.sum  main.go
results-generator/: index.js  package-lock.json  package.json  results.md
router/: router_baseline.yaml  supergraph.graphql
subgraphs/: Dockerfile  composed-schmea.graphql  fixtures.yaml  router-local.yaml  rover-compose.yaml
subgraphs/fixed/: Cargo.toml  Dockerfile  fixtures.yaml
subgraphs/fixed/src/: main.rs
subgraphs/loadtest/: targets.txt
subgraphs/subgraph-a/: Dockerfile  go.mod  gqlgen.yml  server.go
subgraphs/subgraph-b/: Dockerfile  go.mod  gqlgen.yml  server.go
tests/guid-response/: description.json  meta.json  router_co.yaml  router_rh.yaml
tests/header-manipulation/: router_co.yaml  (+1 more)
(+30 files in other folders)
