[package]
name = "coprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163" }
serde_json = "1"
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["full"] }
axum = "0.6.18"
