[package]
name = "fixed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.26"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["full"] }
warp = "0.3.5"
